# htm-bot

./: Dockerfile  compose.yml  example.env  pyproject.toml
.github/workflows/: docker-publish.yml
htm_bot/: bot.py  cog.py  main.py
tests/: test_htm_bot.py
